--- a/movie-ticket-reservation-api/src/main/resources/application.properties
+++ b/movie-ticket-reservation-api/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.data.mongodb.uri=mongodb+srv://saikumarpasupuleti497:sai123@cluster0.fl1fv.mongodb.net/?retryWrites=true&w=majority&appName=Cluster0
+spring.data.mongodb.uri=xxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxxx
 spring.data.mongodb.database=app
 spring.data.mongodb.field-naming-strategy=org.springframework.data.mapping.model.SnakeCaseFieldNamingStrategy
 server.servlet.context-path=/api
